--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-theme: jekyll-theme-cayman
 title: [Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-cayman
