--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: [Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: [DFSSVEP: Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
