--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: [DFSSVEP: Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
+title: [ Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
