--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 
-[ Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
+title: [ Dual Frequency Aggregated Steady-State Motion Visual Evoked Potential Design with Bifold Canonical Correlation Analysis]
+description: [ Raika Karimi,    Arash Mohammadi,    Amir Asif,    Habib Benali]
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
